MDEV-15630 uuid() function evaluates at wrong time in query